fixed dark mode button

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -9,7 +9,7 @@ header {
 
 .header h1 {
   color: white;
-  padding-left: 10px;
+  margin-left: 10px;
 }
 
 h1:hover {
