--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,19 @@ code {
   color: white;
 }
 
+.togglebutton {
+  position: fixed;
+  top: 3%;
+  left: 50%;
+  z-index: 1;
+}
+
+.toggle:hover {
+  background-color: black;
+  transition: all 0.5s ease;
+  transform: scale(1.3);
+}
+
 .toggle {
   background-color: #ed0a3f;
   color: white;
@@ -25,10 +38,10 @@ code {
   height: 45px;
   width: 120px;
 }
-/* 
-.togglebutton {
-  position: sticky;
-  top: 0px;
-  left: 700px;
-  bottom: -10px;
-} */
+
+@media (max-width: 767px) {
+  .togglebutton {
+    top: 5%;
+    left: 70%;
+  }
+}
